--- a/DemoTradeFrontend/angular.json
+++ b/DemoTradeFrontend/angular.json
@@ -62,6 +62,11 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "DemoTrade:build",
+            "proxyConfig": "proxy.conf.js",
+            "port": 4200
+          },
           "configurations": {
             "production": {
               "browserTarget": "DemoTrade:build:production"
