--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,7 +34,7 @@ services:
       dockerfile: PHP.Dockerfile
     volumes:
       - ./api/:/var/www/html/api/
-      - ./.env/:/var/www/html/.env/
+      - ./env/:/var/www/html/env/
     ports:
       - 8080:80
     networks:
